iot-learn-lab/infra/k8s/device-report/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-report-service
  namespace: iot-learn
  labels:
    app: device-report-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-report-service
  template:
    metadata:
      labels:
        app: device-report-service
        version: v1
    spec:
      containers:
        - name: device-report-service
          image: device-report-service:0.1.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8765
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8765
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8765
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
