iot-learn-lab/infra/k8s/device-report/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: device-report-service
  namespace: iot-learn
  labels:
    app: device-report-service
spec:
  type: NodePort
  selector:
    app: device-report-service
  ports:
    - name: http
      port: 8765
      targetPort: 8765
      nodePort: 30765
